# arkhelang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
crates/arkhe/: Cargo.toml  README.md
crates/arkhe/src/: lib.rs
crates/arkhelang/: Cargo.toml  README.md
crates/arkhelang/src/: lib.rs
docs/: spec-sketch.md  style.md
docs/adr/: 0001-closed-world-no-inference.md  0002-cel-guard-language.md  0003-tool-contract-ir-protocols-are-emitters.md  0004-v01-scope.md  0005-guard-and-effect-semantics.md  0006-link-properties-in-traversals.md  0007-canonical-form-and-provenance-hash.md  0008-v02-scope.md  0009-yaml-surface-and-strict-typing.md
docs/guides/: architect-guide.md  data-engineer-guide.md  grc-guide.md
examples/: guard_refusal_demo.py
fixtures/: README.md
fixtures/invalid/: action_without_guard.arkhe.yaml  bad_audit_level.arkhe.yaml  bad_cardinality.arkhe.yaml  duplicate_enum_values.arkhe.yaml  duplicate_keys.arkhe.yaml  effect_beyond_one_hop.arkhe.yaml  effect_off_target.arkhe.yaml  initial_on_plain_enum.arkhe.yaml  lowercase_entity_name.arkhe.yaml  manifest.yaml  merge_key.arkhe.yaml  state_typed_link_property.arkhe.yaml  state_typed_parameter.arkhe.yaml  state_without_initial.arkhe.yaml  unpinned_import_version.arkhe.yaml  values_on_scalar_type.arkhe.yaml  wrong_spec_version.arkhe.yaml  yaml_11_boolean.arkhe.yaml
fixtures/model_risk/: model-risk.arkhe.yaml
fixtures/model_risk/expected/: FinancialModel.get.contract.json  Finding.get.contract.json  MarketDataFeed.get.contract.json  model_risk_lib.py  (+10 more)
schema/: arkhe-0.1.schema.json
(+31 files in other folders)
